fanout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: students-frontend
          servicePort: 3000
      - path: /*
        backend:
          serviceName: students
          servicePort: 8000
